--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,32 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.remove {
+    box-sizing: border-box;
+    position: relative;
+    display: block;
+    transform: scale(var(--ggs,1));
+    width: 22px;
+    height: 22px;
+    border: 2px solid;
+    border-radius: 22px;
+    color: orangered;
+    cursor: pointer;
+}
+.remove::before {
+    content: "";
+    display: block;
+    box-sizing: border-box;
+    position: absolute;
+    width: 10px;
+    height: 2px;
+    background: currentColor;
+    border-radius: 5px;
+    top: 8px;
+    left: 4px
+}
+
+.remove:hover {
+    background-color: gainsboro;
+}
