--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,14 @@
 .remove:hover {
     background-color: gainsboro;
 }
+
+.notif {
+    color: white;
+    font-size: 10px;
+    position: absolute;
+    top: 4.5%;
+    background-color: red;
+    border-radius: 50%;
+    width: 13px;
+    padding: 5px;
+}
